--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   </head>
   <body>
     <header>
-      URL:
+      <span>URL:</span>
       <input type="text" id="url" value="https://premium-promptly-snail.ngrok-free.app" size="45" placeholder="URL" />
+      <div id="online-indicator"><div class="blink"></div></div>
     </header>
     <nav>
       <div id="add-tab" onclick="addTab();">
