--- a/index.html
+++ b/index.html
@@ -18,40 +18,44 @@
       <input type="text" id="url" value="https://premium-promptly-snail.ngrok-free.app" size="45" placeholder="URL" />
     </header>
     <nav>
-      <div id="add-tab" onclick="addTab();">
+      <div id="add-tab" onclick="addNewTab();">
         <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 100 100">
           <path d="M50 10 50 90 M10 50 90 50" stroke-width="20" />
         </svg>
       </div>
       <ul id="tab-list">
-        <li class="q0" data-order="-1" onclick="focusTab(this);">
-          query0
-          <div onclick="closeTab(this)">
-            <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 100 100">
-              <path d="M10 10 90 90 M90 10 10 90" stroke-width="20" />
-            </svg>
-          </div>
-        </li>
+        <noscript>
+          <li class="q0 active" data-order="-1" onclick="focusTab(this);">
+            query0
+            <div onclick="closeTab(this)">
+              <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 100 100">
+                <path d="M10 10 90 90 M90 10 10 90" stroke-width="20" />
+              </svg>
+            </div>
+          </li>
+        </noscript>
       </ul>
     </nav>
     <main id="tab-settings">
-      <article class="q0">
-        <textarea class="prompt" oninput="saveTab(getClass(this.closest('article')));" rows="10" spellcheck="false"></textarea>
-        <div class="controls">
-          <div class="controls-option">
-            <button onclick="queueQuery(this);">Start</button>
+      <noscript>
+        <article class="q0 active">
+          <textarea class="prompt" oninput="saveTab(getClass(this.closest('article')));" rows="10" spellcheck="false"></textarea>
+          <div class="controls">
+            <div class="controls-option">
+              <button onclick="queueQuery(this);">Start</button>
+            </div>
+            <div class="controls-info">
+              <input class="iterations" type="number" min="1" max="100" step="1" value="20" />
+              <div class="progress">0/0</div>
+            </div>
           </div>
-          <div class="controls-info">
-            <input class="iterations" type="number" min="1" max="100" step="1" value="20" />
-            <div class="progress">0/0</div>
-          </div>
-        </div>
-        <details>
-          <summary>Negative Prompt</summary>
-          <textarea class="negative-prompt" oninput="saveTab(getClass(this.closest('article')));" rows="5" spellcheck="false"></textarea>
-        </details>
-        <ul class="log"></ul>
-      </article>
+          <details>
+            <summary>Negative Prompt</summary>
+            <textarea class="negative-prompt" oninput="saveTab(getClass(this.closest('article')));" rows="5" spellcheck="false"></textarea>
+          </details>
+          <ul class="log"></ul>
+        </article>
+      </noscript>
     </main>
   </body>
 </html>
