--- a/index.html
+++ b/index.html
@@ -57,5 +57,14 @@
         </article>
       </noscript>
     </main>
+    <ul id="keyboard-addon" onclick="insertChar(this, event);" ontouchend="event.preventDefault();">
+      <li>(</li>
+      <li>)</li>
+      <li>{</li>
+      <li>}</li>
+      <li>:</li>
+      <li>&lt;</li>
+      <li>&gt;</li>
+    </ul>
   </body>
 </html>
