--- a/index.html
+++ b/index.html
@@ -1,73 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="autocomplete/autocomplete.js"></script>
+    <script src="app.js"></script>
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
-  <script src="autocomplete/autocomplete.js"></script>
-  <script src="app.js"></script>
-  <title>Document</title>
-</head>
-
-<body>
-  <header>
-    <div id="online-indicator">
-      <div class="blink"></div>
+  <body>
+    <div id="sidebar" style="display: none">
+      <div id="sidebar-header" onclick="closeSidebar()">
+        Sidebar
+        <div class="div-svg">
+          <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 100 100">
+            <path d="M10 10 90 90 M90 10 10 90" stroke-width="20" />
+          </svg>
+        </div>
+      </div>
+      <div id="sidebar-content">
+        <ul></ul>
+        <div>
+          <fieldset id="choose-domain">
+            <legend>Use domains:</legend>
+            <label><input type="checkbox" name="premium-promptly-snail.ngrok-free.app" data-authtoken="2VWSdfMKG2NZdQX2z7R5WHsQiTg_P8ss4CK4EzozrrRYTnxv" />premium-promptly-snail.ngrok-free.app</label>
+            <label><input type="checkbox" name="fleet-bluebird-polished.ngrok-free.app" data-authtoken="2ahPEpE2q1ntpVDvVLeuTRyhoGi_89wgoryFz3dE8rz6KEZ1w" />fleet-bluebird-polished.ngrok-free.app</label>
+            <label><input type="checkbox" name="whippet-blessed-bedbug.ngrok-free.app" data-authtoken="2bPg9KgLwfOKJUTacd5BnRohgI3_7kx69hmm4JBKDtgnTXrBK" />whippet-blessed-bedbug.ngrok-free.app</label>
+            <label><input type="checkbox" name="finer-toad-ample.ngrok-free.app" data-authtoken="2bPhBibXbwqvWNHcHHZrZibw4ZQ_7kfszXf6da467jzLJXSDx" />finer-toad-ample.ngrok-free.app</label>
+            <label><input type="checkbox" name="crucial-presently-tiger.ngrok-free.app" data-authtoken="2bPhPdQQ5y8NZFaylELRhuenLCO_7aPEyYzfXdAyVtPqpTUYc" />crucial-presently-tiger.ngrok-free.app</label>
+          </fieldset>
+          <button id="prequeue-button" onclick="prequeue()">Prequeue</button>
+        </div>
+      </div>
     </div>
-    <input type="text" id="url" value="https://premium-promptly-snail.ngrok-free.app" size="45" placeholder="URL" />
-    <button onclick="prequeue()">Prequeue</button>
-  </header>
-  <main>
-    <div id="add-tab" onclick="addNewTab();">
-      <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 100 100">
-        <path d="M50 10 50 90 M10 50 90 50" stroke-width="20" />
-      </svg>
-    </div>
-    <ul id="tab-list">
-      <noscript>
-        <li class="tab active" data-index="0" data-order="-1">
-          <div class="tab-header" onclick="focusTab(this);">
-            query0
-            <div class="close-tab" onclick="closeTab(this, event)">
-              <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 100 100">
-                <path d="M10 10 90 90 M90 10 10 90" stroke-width="20" />
-              </svg>
-            </div>
-          </div>
-          <div class="tab-content">
-            <textarea class="prompt" oninput="saveTabs();" rows="10" spellcheck="false"></textarea>
-            <div class="controls">
-              <button onclick="queueQuery(this);">Start</button>
-              <div class="options">
-                <input class="iterations" type="number" min="1" max="100" step="1" value="20" />
-                <div class="progress">0/0</div>
+    <header>
+      <div class="div-svg" onclick="openSidebar()">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" height="20" width="20" stroke-width="15">
+          <line x1="10" y1="20" x2="90" y2="20" />
+          <line x1="10" y1="50" x2="90" y2="50" />
+          <line x1="10" y1="80" x2="90" y2="80" />
+        </svg>
+      </div>
+      <input type="text" id="url" value="https://premium-promptly-snail.ngrok-free.app" size="45" placeholder="URL" />
+      <div id="online-indicator">
+        <div class="blink"></div>
+      </div>
+    </header>
+    <main>
+      <div id="add-tab" onclick="addNewTab();">
+        <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 100 100">
+          <path d="M50 10 50 90 M10 50 90 50" stroke-width="20" />
+        </svg>
+      </div>
+      <ul id="tab-list">
+        <noscript>
+          <li class="tab active" data-index="0" data-order="-1">
+            <div class="tab-header" onclick="focusTab(this);">
+              query0
+              <div class="close-tab" onclick="closeTab(this, event)">
+                <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 100 100">
+                  <path d="M10 10 90 90 M90 10 10 90" stroke-width="20" />
+                </svg>
               </div>
             </div>
-            <details>
-              <summary>Negative Prompt</summary>
-              <textarea class="negative-prompt" oninput="saveTabs();" rows="5" spellcheck="false"></textarea>
-            </details>
-            <ul class="log"></ul>
-          </div>
-        </li>
-      </noscript>
+            <div class="tab-content">
+              <textarea class="prompt" oninput="saveTabs();" rows="10" spellcheck="false"></textarea>
+              <div class="controls">
+                <button onclick="queueQuery(this);">Start</button>
+                <div class="options">
+                  <input class="iterations" type="number" min="1" max="100" step="1" value="20" />
+                  <div class="progress">0/0</div>
+                </div>
+              </div>
+              <details>
+                <summary>Negative Prompt</summary>
+                <textarea class="negative-prompt" oninput="saveTabs();" rows="5" spellcheck="false"></textarea>
+              </details>
+              <ul class="log"></ul>
+            </div>
+          </li>
+        </noscript>
+      </ul>
+    </main>
+    <ul id="keyboard-addon" onclick="insertCharacter(event);">
+      <li>(</li>
+      <li>)</li>
+      <li>{</li>
+      <li>|</li>
+      <li>}</li>
+      <li>:</li>
+      <li>&lt;</li>
+      <li>&gt;</li>
     </ul>
-  </main>
-  <ul id="keyboard-addon" onclick="insertCharacter(event);">
-    <li>(</li>
-    <li>)</li>
-    <li>{</li>
-    <li>|</li>
-    <li>}</li>
-    <li>:</li>
-    <li>&lt;</li>
-    <li>&gt;</li>
-  </ul>
-</body>
-
+  </body>
 </html>
