--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="autocomplete/autocomplete.js"></script>
     <script src="app.js"></script>
-    <title>Document</title>
+    <title>Main</title>
   </head>
 
   <body>
